--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Montserrat&family=Poppins:wght@600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/c845a933d6.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <app-root></app-root>
